Create tuned and optimize features.

--- a/mixxx/plugins/soundsourcewv/SConscript
+++ b/mixxx/plugins/soundsourcewv/SConscript
@@ -5,7 +5,7 @@ import sys
 import SCons
 import shutil
 
-Import('build', 'flags')
+Import('build')
 
 
 # On Posix default SCons.LIBPREFIX = 'lib', on Windows default SCons.LIBPREFIX = ''
@@ -18,8 +18,15 @@ wv_sources = [
 
 #Tell SCons to build the SoundSourceWV plugin
 #=========================
-if int(flags['wv']):
+if int(build.flags['wv']):
 	SHLIBPREFIX='lib' #Makes the filename "libsoundsourcewv" consistently across platforms to make our lives easier.
+        env = build.env.Clone()
+        conf = Configure(env)
+
+        have_wv = conf.CheckLib('wavpack', 'wv')
+
+        env = conf.Finish()
+
 	if build.platform_is_windows:
 		sswv_bin = build.env.SharedLibrary('soundsourcewv', wv_sources, LINKCOM  = [build.env['LINKCOM'], 'mt.exe -nologo -manifest ${TARGET}.manifest -outputresource:$TARGET;1'])
 	else:
