--- a/mixxx/plugins/SConscript
+++ b/mixxx/plugins/SConscript
@@ -1,13 +1,20 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
 
-Import('build_dir')
-Import('build', 'flags')
+Import('build')
 
 plugins = []
-soundsourcem4a = SConscript(File('soundsourcem4a/SConscript'), build_dir=Dir(build_dir + "/m4a"), duplicate=0, exports=['build','flags'])
-soundsourcewv = SConscript(File('soundsourcewv/SConscript'), build_dir=Dir(build_dir + "/wv"), duplicate=0, exports=['build','flags'])
+
+soundsourcem4a = SConscript(
+    File('soundsourcem4a/SConscript'),
+    build_dir=Dir(build.build_dir + "/m4a"),
+    duplicate=0, exports=['build'])
 plugins.extend(soundsourcem4a)
+
+soundsourcewv = SConscript(
+    File('soundsourcewv/SConscript'),
+    build_dir=Dir(build.build_dir + "/wv"),
+    duplicate=0, exports=['build'])
 plugins.extend(soundsourcewv)
 
 Return("plugins")
