--- a/mixxx/plugins/soundsourcem4a/SConscript
+++ b/mixxx/plugins/soundsourcem4a/SConscript
@@ -5,7 +5,7 @@ import sys
 import SCons
 import shutil
 
-Import('build', 'flags')
+Import('build')
 
 
 # On Posix default SCons.LIBPREFIX = 'lib', on Windows default SCons.LIBPREFIX = ''
@@ -18,12 +18,38 @@ m4a_sources = [
 
 #Tell SCons to build the SoundSourceM4A plugin
 #=========================
-if int(flags['m4a']):
+if int(build.flags['m4a']):
+        env = build.env.Clone()
+
+        conf = Configure(env)
+
+        have_mp4v2_h = conf.CheckHeader('mp4v2/mp4v2.h')
+        have_mp4 = (have_mp4v2_h and conf.CheckLib(['mp4v2', 'libmp4v2'])) or \
+            conf.CheckLib('mp4')
+
+        have_faad = conf.CheckLib(['faad', 'libfaad'])
+        have_faad_26 = False
+
+        # Check for libfaad version 2.6. This check doesn't work correctly on Windows
+        # And we build it manually anyway, so we know it's v2.7
+        if have_faad and not build.platform_is_windows:
+            have_faad_26 = (not conf.CheckLibWithHeader(
+                    'libfaad', 'faad.h', 'c++',
+                    call = 'faacDecInit2(0, 0, 0, (unsigned long*)0, (unsigned char*)0);',
+                    autoadd=False))
+
+        if have_faad_26:
+            env.Append(CPPDEFINES = '__M4AHACK__')
+            print "libfaad 2.6 compatibility mode... enabled"
+        env.Append(CPPDEFINES = '__MP4V2__')
+
+        env = conf.Finish()
+
 	SHLIBPREFIX='lib' #Makes the filename "libsoundsourcem4a" consistently across platforms to make our lives easier.
 	if build.platform_is_windows:
-		ssm4a_bin = build.env.SharedLibrary('soundsourcem4a', m4a_sources, LINKCOM  = [build.env['LINKCOM'], 'mt.exe -nologo -manifest ${TARGET}.manifest -outputresource:$TARGET;1'])
+		ssm4a_bin = env.SharedLibrary('soundsourcem4a', m4a_sources, LINKCOM  = [env['LINKCOM'], 'mt.exe -nologo -manifest ${TARGET}.manifest -outputresource:$TARGET;1'])
 	else:
-		ssm4a_bin = build.env.SharedLibrary('soundsourcem4a', m4a_sources)
+		ssm4a_bin = env.SharedLibrary('soundsourcem4a', m4a_sources)
 
 	#Pass this soundsourcem4a library object file back to the SConscript above us.
 	Return("ssm4a_bin")
