--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -114,8 +114,13 @@ build_flags = ""
 print "\nFeatures Summary:\n================"
 
 for feature in available_features:
-        print "%060s... %s" % (feature.description(),
-                               "Enabled" if feature.enabled(build) else "Disabled")
+        message = "Enabled" if feature.enabled(build) else "Disabled"
+
+        # If the plugin has a status message, show it instead
+        if len(feature.status) > 0:
+                message = "%s" % feature.status
+
+        print "%060s... %s" % (feature.description(), message)
 
 build_flags = ' '.join(sorted([k for k,v in build.flags.items() if int(v) > 0]))
 
