--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -11,26 +11,6 @@ Import('build')
 # Grab the created environment from the MixxxBuild
 env = build.env
 
-# Checks for pkg-config on Linux
-def CheckForPKGConfig( context, version='0.0.0' ):
-	context.Message( "Checking for pkg-config (at least version %s)... " % version )
-	ret = context.TryAction( "pkg-config --atleast-pkgconfig-version=%s" %version )[0]
-	context.Result( ret )
-	return ret
-
-# Uses pkg-config to check for a minimum version
-def CheckForPKG( context, name, version="" ):
-	if version == "":
-		context.Message( "Checking for %s... \t" % name )
-		ret = context.TryAction( "pkg-config --exists '%s'" % name )[0]
-	else:
-		context.Message( "Checking for %s (%s or higher)... \t" % (name,version) )
-		ret = context.TryAction( "pkg-config --atleast-version=%s '%s'" % (version,name) )[0]
-		context.Result( ret )
-	return ret
-
-env['MIXXX_VERSION'] = util.get_mixxx_version() #should this be in the env?
-
 #env.Append(CPPDEFINES=[('BUILD_REV', '"%s"' % getBZRRevision())]) #doing this forces a rebuild of everything whenever a commit happens -- not much fun
 ## instead, embed BZR version into build
 ## Put version info into a file, so it doesn't force a rebuild of everything :)
@@ -42,8 +22,8 @@ finally:
 
 #Check for dependencies if we're not doing a clean...
 #if not env.GetOption('clean') and not SCons.Util.containsAny(os.sys.argv, ['-h', '--help']):
-conf = Configure(env, custom_tests = { 'CheckForPKGConfig' : CheckForPKGConfig,
-                                       'CheckForPKG' : CheckForPKG })
+conf = Configure(env, custom_tests = { 'CheckForPKGConfig' : util.CheckForPKGConfig,
+                                       'CheckForPKG' : util.CheckForPKG })
 
 available_features = [depends.MixxxCore]
 extra_features = build.get_features()
