Fix test compiling so GTest compiles correctly without affecting the rest of Mixxx.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -55,6 +55,38 @@ if build.platform_is_windows:
 else:
 	mixxx_bin = env.Program('mixxx', sources)
 
+def build_tests():
+        test_files = Glob('test/*.cpp', strings=True)
+        test_env = env.Clone()
+        test_env.Append(CPPPATH="#lib/gtest-1.3.0/include")
+        test_files = [test_env.StaticObject(filename) \
+                              if filename !='main.cpp' else filename
+                      for filename in test_files]
+
+        mixxx_sources = [filename for filename in sources if filename != 'main.cpp']
+        test_sources = (test_files + mixxx_sources)
+
+        env.Append(LIBPATH="#lib/gtest-1.3.0/lib")
+	env.Append(LIBS = 'gtest')
+
+	env.Program(target='mixxx-test', source=test_sources)
+
+	Command("../mixxx-test", "./mixxx-test", Copy("$TARGET", "$SOURCE"))
+
+def run_tests():
+        ret = Execute("./mixxx-test")
+	if ret != 0:
+                print "WARNING: Not all tests pass. See mixxx-test output."
+                Exit(ret)
+
+if int(build.flags['test']):
+        print "Building tests."
+        build_tests()
+
+if 'test' in BUILD_TARGETS:
+	print "Running tests."
+	run_tests()
+
 
 
 #Set up the install target
