--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -1,6 +1,7 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
 import sys, os, platform
+import SCons
 import SCons.Script
 import logging
 
@@ -104,16 +105,6 @@ for feature in available_features:
 
 build_flags = ' '.join(sorted([k for k,v in build.flags.items() if int(v) > 0]))
 
-def build_tests():
-	test_sources = (Glob('test/*.cpp', strings=True) + [x for x in sources if x != "main.cpp"])
-	env.Program(target='mixxx-test', source=test_sources)
-	Command("../mixxx-test", "./mixxx-test", Copy("$TARGET", "$SOURCE"))
-
-def run_tests(self):
-        ret = Execute("./mixxx-test")
-	if ret != 0:
-                print "WARNING: Not all tests pass. See mixxx-test output."
-                Exit(ret)
 
 ### Put flags info into a file
 f = open("build.h","a")
@@ -122,19 +113,9 @@ try:
 finally:
 	f.close()
 
-#Tell SCons to build unit tests
-if int(build.flags['test']):
-	print "Building tests."
-	build_tests()
-
-if 'test' in BUILD_TARGETS:
-	print "Running tests."
-	run_tests()
-
 #Set up the MSVC target to build a Visual Studio project/solution file
 if 'msvc' in COMMAND_LINE_TARGETS:
 	includes = map(str, Glob('#src/*.h'))
-	includes += map(str, Glob('#src/visual/*.h'))
 	#Make the project file aware of any command-line arguments that were passed...
 	cmdargs = ""
 	for k in SCons.Script.ARGUMENTS:
