Add force32 and force64 handling back in.

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -44,6 +44,7 @@ unmet_dependencies = False
 def visit_dependency(dependency_class, build, conf):
         """Recursively configure all dependencies. Skip over dependencies we
         have already setup."""
+        global unmet_dependencies
 
         if dependency_class in visited_dependencies:
                 return
