--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -285,6 +285,23 @@ if build.platform_is_windows:
 	#env.Alias('mixxx', icon)
 	env.Alias('mixxx', binary)
 
+def win32_find_nsis_via_registry():
+        # Windows registry access to find where NSIS is installed
+        import _winreg
+        hklm = _winreg.ConnectRegistry(None, _winreg.HKEY_LOCAL_MACHINE)
+        nsis_location_handle = None
+        try:
+                nsis_location_handle = _winreg.OpenKey(hklm, "SOFTWARE\\NSIS", 0, _winreg.KEY_READ)
+        except WindowsError:
+                nsis_location_handle = None
+
+        if not nsis_location_handle:
+                try:
+                        nsis_location_handle = _winreg.OpenKey(hklm, "SOFTWARE\\Wow6432Node\\NSIS", 0, _winreg.KEY_READ)
+                except WindowsError:
+                        nsis_location_handle = None
+        return nsis_location_handle
+
 def BuildRelease(target, source, env):
 	print
 	print "==== Mixxx Post-Build Checks ===="
@@ -299,7 +316,7 @@ def BuildRelease(target, source, env):
 	print
 	print "Installer file ",
 	os.system('grep OutFile Mixxx.nsi | cut -d \' \' -f 2')
-	print
+	printpath
 	print "Top line of README, check version:"
 	os.system('head -n 1 README')
 	print
@@ -311,37 +328,30 @@ def BuildRelease(target, source, env):
 
 	if (raw_input("Go ahead and build installer (yes/[no])? ") == "yes"):
 		print "\nNow building installer..."
-
 		buildwin64 = ""
-		type(buildwin64) == str
 
-		# Windows registry access to find where NSIS is installed
-		import _winreg
-		hklm = _winreg.ConnectRegistry( None, _winreg.HKEY_LOCAL_MACHINE )
-		nsis_location_handle = ""
-		try:
-			nsis_location_handle = _winreg.OpenKey(hklm, "SOFTWARE\\NSIS", 0, _winreg.KEY_READ)
-		except WindowsError:
-			nsis_location_handle = None
+                command_flag = None
+                nsis_path = None
+                if not build.crosscompile and build.platform_is_windows:
+                        nsis_directory = win32_find_nsis_via_registry()
+                        nsis_path = "\"%s\\makensis.exe\"" % nsis_directory
+                        command_flag = '/'
+                elif build.crosscompile and build.platform_is_windows:
+                        nsis_path = 'makensis'
+                        command_flag = '-'
 
-		if not nsis_location_handle:
-			try:
-				nsis_location_handle = _winreg.OpenKey(hklm, "SOFTWARE\\Wow6432Node\\NSIS", 0, _winreg.KEY_READ)
-			except WindowsError:
-				nsis_location_handle = None
-
-		if not nsis_location_handle:
+                if not nsis_path:
 			print "Cannot find NSIS. Do you have it installed?"
 		else:
+                        parameters = []
 			if build.machine_is_64bit:
-				buildwin64 = "/Dx64=1"
+                                parameters.append("%sx64=1" % command_flag)
 			nsis_location = _winreg.QueryValue(nsis_location_handle, None)
 			_winreg.CloseKey(hklm)
 
 			# Call the NSIS build
 			command = '\"%(path)s\\makensis.exe\" /DPRODUCT_VERSION=%(version)s %(64bit)s build\\nsis\\Mixxx.nsi' % {'path':nsis_location, \
 'version':mixxx_version, '64bit':buildwin64}
-			type(command) == str
 			print "Using command:" + command
 			os.system(command)
 	else:
