Added post_dependency_check_configure() function to Dependency class to skirt env pollution during the configure stage. Fixes build with msvs on win32.

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -87,6 +87,9 @@ for dependency in active_dependencies:
         dep_sources = dependency.sources(build)
         if dep_sources is not None:
                 sources.extend(dep_sources)
+        #If there's additional env variables that need to be set after the
+        #Configure checks have run, then we'll take care of that now.
+        dependency.post_dependency_check_configure(build, conf)
 
 env = conf.Finish()
 
