Extra linker flag to make m4a plugin compile again on windows

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -520,7 +520,7 @@ if 'win' in platformString:
 	env.Append(CPPPATH='#/../mixxx-win' + bitwidth + 'lib-msvc') #If you add more directories, separate them with a semicolon (;)
 	env.Append(LIBPATH='#/../mixxx-win' + bitwidth + 'lib-msvc')
 	env.Append(CPPPATH='../../lib/ladspa') #If you add more directories, separate them with a semicolon (;)
-	env.Append(LINKFLAGS = ['/nodefaultlib:libc.lib', '/nodefaultlib:libcd.lib',  '/entry:mainCRTStartup'])
+	env.Append(LINKFLAGS = ['/nodefaultlib:libc.lib', '/nodefaultlib:libcd.lib',  '/entry:mainCRTStartup', '/nodefaultlib:msvcrt'])
 	env.Append(LIBS='advapi32') # needed for PortMIDI
 #'/subsystem:windows',
 
