Fixed msvc target that builds the MSVC project file

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -4,6 +4,7 @@ import sys, os, platform
 import SCons
 import SCons.Script
 import logging
+import fnmatch
 
 from build import util, mixxx, depends
 
@@ -123,27 +124,47 @@ finally:
 
 #Set up the MSVC target to build a Visual Studio project/solution file
 if 'msvc' in COMMAND_LINE_TARGETS:
-	includes = map(str, Glob('#src/*.h'))
-	#Make the project file aware of any command-line arguments that were passed...
-	cmdargs = ""
-	for k in SCons.Script.ARGUMENTS:
-		cmdargs += " " + k + "=" + SCons.Script.ARGUMENTS[k]
-	env.Append(MSVSSCONSFLAGS = cmdargs)
-	#env.Append(MSVSSCONSFLAGS = ' qtdir=' + build.flags['qtdir'])
+    #includes = map(str, Glob('#src/*.h'))
+    #Make the project file aware of any command-line arguments that were passed...
+    cmdargs = ""
+    for k in SCons.Script.ARGUMENTS:
+        cmdargs += " " + k + "=" + SCons.Script.ARGUMENTS[k]
+    env.Append(MSVSSCONSFLAGS = cmdargs)
+    #env.Append(MSVSSCONSFLAGS = ' qtdir=' + build.flags['qtdir'])
 
-	# This is the right way to do it but scons is stupid and doesn't copy flags in... Adam
-	# Set up environment for debug target
-	# TODO Handle lib versions ie /MDd /Md etc...
-	#debugenv = env.Clone()
-	#debugenv.Prepend(LINKFLAGS = ['/DEBUG','/PDB:dist' + str(build.bitwidth) + '/mixxx.pdb']) # Generate MS VC Program Debug Database
-	#debugenv.Append(CXXFLAGS = '/ZI')
+    # This is the right way to do it but scons is stupid and doesn't copy flags in... Adam
+    # Set up environment for debug target
+    # TODO Handle lib versions ie /MDd /Md etc...
+    #debugenv = env.Clone()
+    #debugenv.Prepend(LINKFLAGS = ['/DEBUG','/PDB:dist' + str(build.bitwidth) + '/mixxx.pdb']) # Generate MS VC Program Debug Database
+    #debugenv.Append(CXXFLAGS = '/ZI')
 
-	msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = sources, incs = includes, variant = 'Debug', runfile = '../dist' + str(build.bitwidth) + '/mixxx.exe')
+    cppfiles = []
+    hfiles = []
+    # XXX: Assumes we're in the "src" directory!
+    for root, dirs, filenames in os.walk('.'): 
+        #for exclusion in ['.bzr', '.svn']: 
+        #    if exclusion in dirs: 
+        #        dirs.remove(exclusion)     
+        #print filenames
+        for file in filenames: 
+            #print file
+            filepath = os.path.join(root, file)
+            if filepath.startswith(".\\"):
+                filepath = filepath[2:]
 
-	# Reenable this once bug in scons is fixed...
-	#msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = sources, incs = includes, variant = 'Release', runfile = '../dist' + str(build.bitwidth) + '/mixxx.exe')
+            #print filepath
+            if fnmatch.fnmatch(filepath, '*.cpp'): 
+                cppfiles.append(filepath) 
+            elif fnmatch.fnmatch(filepath, '*.h'): 
+                hfiles.append(filepath) 
 
-	env.Alias('msvc', msvc)
+    msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = cppfiles, incs = hfiles, variant = 'Debug', runfile = '../dist' + str(build.bitwidth) + '/mixxx.exe')
+
+    # Reenable this once bug in scons is fixed...
+    #msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = cppfiles, incs = hfiles, variant = 'Release', runfile = '../dist' + str(build.bitwidth) + '/mixxx.exe')
+
+    env.Alias('msvc', msvc)
 
 # Print the build flags (useful if the flags have been cached, ie. if you just run "scons"
 # and want to see the flags that you used last time)
