Fix BPM tapping so that it works with the GUI as well as MIDI. Make it only react after 4-presses.

--- a/mixxx/res/keyboard/Standard.kbd.cfg
+++ b/mixxx/res/keyboard/Standard.kbd.cfg
@@ -24,7 +24,7 @@ filterLowKill 5
 filterMidKill 4
 filterHighKill 3
 flanger 2
-bpm q
+bpm_tap q
 hotcue_1_activate z
 hotcue_2_activate x
 hotcue_3_activate c
@@ -56,7 +56,7 @@ filterLowKill 6
 filterMidKill 7
 filterHighKill 8
 flanger 9
-bpm u
+bpm_tap u
 hotcue_1_activate m
 hotcue_2_activate ,
 hotcue_3_activate .
